# wifitest

./: .gitignore  README.md  dump.rdb  functionalities_roadmap.txt  functionalities_summary.txt  mac.csv  manufacter.csv  to-do.txt
backend/MCP/: .env  README.md  pyproject.toml  redis_queue.py  requirements.txt  serializer.py  server.py  tool_contracts.py  worker.py
backend/MCP/tools/: __init__.py  connect_to_target_network.py  detect_management_services.py  detect_upnp_exposure.py  detect_wps_exposure.py  disconnect_from_network.py  discover_gateway_and_router_profile.py  get_connection_status.py  helpers.py  inspect_target_network_profile.py  ping.py  scan_wifi_networks.py
backend/MCP/wifitest_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chat_service/: README.md  __init__.py  errors.py  main.py  mcp_client.py  openai_client.py  openai_mcp.py  queue.py  redis_client.py  requirements.txt  runChatService.sh  runChatWorker.sh  settings.py  sse.py  store.py  worker.py
contracts/: tools.json
docs/: architecture-overview.md
frontend/: README.md  package.json
frontend/src/: index.html  main.js  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/lib/chat/: client.js
frontend/src/lib/contracts/: contracts.js
frontend/src/lib/mcp/: client.js  jobs.js  store.js  tools.js
frontend/src/lib/security/: password-strength.js  (+1 more)
scripts/: dev-stack.sh  dump.rdb  enable-monitor-mode.sh  install-linux.sh  run-app.sh  serve-frontend-web.py  uninstall-linux.sh
